# Omnicopy-To-Output

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs
tests/: build_tests.rs  cargo_cache_tests.rs  common.rs  psuedo_integration_tests.rs
tests/common/: mod.rs
tests/fake_crate/: Cargo.toml  build.rs
tests/fake_workspace/: Cargo.toml
tests/fake_workspace/fake_crate/: Cargo.toml  build.rs
tests/fake_workspace/fake_crate/res/: test.txt
tests/fake_workspace/fake_crate/res/nested/: test2.txt
tests/fake_workspace/fake_crate/res/nested/doublenested/: test3.txt
tests/fake_workspace/fake_crate/src/: lib.rs
