[package]
name = "omnicopy_to_output"
description = "Generalized post build copy to place files in output directory"
version = "0.2.0"
edition = "2021"
authors = ["Chris Henk <Chris.Henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/Omnicopy-To-Output"
readme = "README.md"
keywords = ["cargo", "filesystem", "tools"]
categories = ["filesystem"]

[dependencies]
fs_extra = "1.3.0"
anyhow = "1.0.75"
project-root = "0.2.2"
build-target = "0.4.0"

[dev-dependencies]
tempfile = "3.8.1"
